[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Josh Simmons <simmons44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []
default=["nightly"]

[dependencies]
log = "0.4.11"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
memmap = "0.7"
perf-event-open-sys = "1.0.1"