[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Josh Simmons <simmons44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = "0.4.11"

[profile.release]
panic = "abort"
debug = true
opt-level = 3
lto="thin"

[profile.dev]
panic = "abort"
opt-level = 0

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
memmap2 = "0.2.1"
perf-event-open-sys = "3.0.0"
